# test_cgal

./: CMakeLists.txt  ray.cc
cmake/: FindCGAL.cmake
src/: poly.cc  ray.cc
